--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -33,6 +33,8 @@ $black: #212121;
 $grey: #bdbdbd;
 $white: #eeeeee;
 $blacklight: #616161;
+$red: #f06292;
+$green: #66bb6a;
 
 $font-family: 'Rubik', sans-serif;
 
