Search component READY
- Search bar can find country names and filter

--- a/src/components/CountryCard/countrycard.scss
+++ b/src/components/CountryCard/countrycard.scss
@@ -23,11 +23,7 @@
   }
 
   &__region {
-    color: $black;
-  }
-
-  &__language {
-    color: $black;
+    color: $blacklight;
   }
 
   .button {
@@ -35,6 +31,9 @@
     color: $black;
     font-family: $font-family;
     letter-spacing: 1px;
+    &:disabled {
+      background-color: $grey;
+    }
 
     &:hover {
       background-color: $primaryhover;
