--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -28,7 +28,7 @@ $font-weights: (
 // all variables
 
 $primary: #2196f3;
-$primaryhover: #3f51b5;
+$primaryhover: #0043c0;
 $black: #212121;
 $grey: #bdbdbd;
 $white: #eeeeee;
